--- a/_kontakt-style.scss
+++ b/_kontakt-style.scss
@@ -23,8 +23,13 @@
 
     .contact-title{
       p{
-      font-size: 2rem;
-      text-align: center;
+      
+text-align: center;
+text-transform: uppercase;
+ font-size: 1.3rem;
+ font-weight: 600;
+ letter-spacing: 1px; 
+ margin-bottom: 30px;
       }
     }
     
