--- a/_om-oss-style.scss
+++ b/_om-oss-style.scss
@@ -1,8 +1,22 @@
+
+.title-team{
+padding-left: 30px;
+text-align: center;
+padding-left:30px;
+color: $font-color-1;
+ font-size: 1.3rem;
+ font-weight: 600;
+ letter-spacing: 1px; 
+ margin-bottom: 30px;
+ text-transform: uppercase;
+ 
+}
 .team{
 	width: 100%;
+	background-color: rgba(213, 209, 216, 0.47);
 	
-	margin-top: 70px;
-	margin-bottom: 50px;
+	padding-top:35px;
+	padding-bottom: 35px;
 }
 .team-content{
     
@@ -27,7 +41,7 @@
     width: 80%;
     max-width: 300px;
 	padding: 16px;
-	background-color:rgba(12, 204, 204, 0.395);
+	background-color:rgba(214, 190, 231, 0.368);
 	border-radius: 30px;
 	transition: all .38s ease;
 }
