--- a/_refrenser-style.scss
+++ b/_refrenser-style.scss
@@ -29,11 +29,18 @@ a{
             padding:10px 20px;
         }
         span{
-            font-size: 1.3rem;
+            
             color: black;
-            margin-bottom: 10px;
-            letter-spacing: 3px;
+            
             text-transform: uppercase;
+            text-align: center;
+        
+           font-size: 1.3rem;
+            font-weight: 600;
+            letter-spacing: 1px; 
+ 
+           
+
         }
         
 
