--- a/style.css
+++ b/style.css
@@ -456,6 +456,7 @@ body {
   align-items: center;
   display: flex;
   flex-direction: column;
+  margin-bottom: 40px;
 }
 .om-oss .om-oss-title p {
   text-align: left;
